# reframe-one

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  MEMORY.md  PRD.md  README.md  pyproject.toml
.github/: gemini-code-assist.yml
.github/workflows/: ci.yml
docs/: SPEC.md
docs/plans/: kdenlive-integration.md
src/reframe_one/: cli.py  clip_selector.py  config.py  kdenlive_gen.py  llm.py  parse_kdenlive.py  pdf_parser.py  scene_detect.py  speaker_detect.py  subtitles.py
tests/: test_clip_selector.py  test_config.py  test_integration.py  test_kdenlive_gen.py  test_parse_kdenlive.py  test_scene_detect.py  test_subtitles.py
