[project]
name = "reframe-one"
version = "0.1.0"
description = "Automated vertical reframing for podcast videos"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "opencv-python>=4.10",
    "mediapipe>=0.10",
    "pysubs2>=1.7",
    "numpy>=2.0",
]

[project.optional-dependencies]
whisper = ["stable-whisper>=2.17"]

[project.scripts]
reframe-one = "reframe_one.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
