[project]
name = "reframe-one"
version = "0.1.0"
description = "Automated vertical reframing for podcast videos"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "opencv-python>=4.10",
    "mediapipe>=0.10",
    "pysubs2>=1.7",
    "numpy>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
whisper = ["stable-whisper>=2.17"]
dev = ["pytest>=8.0", "ruff>=0.11"]

[project.scripts]
reframe-one = "reframe_one.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
